# AdvancedComputerSystemsProjects

Project1/: CMakeLists.txt  generate_graphs_from_data.py  log.txt  main.c  myperfmodule.h  output.txt  report.md  run_all_builds.bat  run_tests.bat
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_DRAM_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L1_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_L2_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_double_LLC_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_DRAM_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_1_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_2_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_2_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_4_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_4_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_8_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L1_8_NO_ALIGN/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
Project1/data_analysis/raw_data/NO_VECTORIZE_float_L2_1_ALIGN_ARRAYS/: MULTIPLY.csv  REDUCE.csv  STREAM.csv
(+295 files in other folders)
